--- a/public/css/cadastroMensagem.css
+++ b/public/css/cadastroMensagem.css
@@ -19,14 +19,6 @@ form {
     margin-left: 5%;
 }
 
-#ger {
-    margin-left: 25%;
-}
-
-#gerente {
-    margin-left: 5%;
-}
-
 legend {
   padding: 2%;
   width: 23%;
@@ -71,18 +63,11 @@ label {
 
 textarea {
   border: 1px solid #D8D8D8 ;
-
-	background: #ffffff; /* Old browsers */
-  background: -moz-linear-gradient(top, #ffffff 0%, #e5e5e5 100%); /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(100%,#e5e5e5)); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top, #ffffff 0%,#e5e5e5 100%); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top, #ffffff 0%,#e5e5e5 100%); /* Opera 11.10+ */
-  background: -ms-linear-gradient(top, #ffffff 0%,#e5e5e5 100%); /* IE10+ */
-  background: linear-gradient(to bottom, #ffffff 0%,#e5e5e5 100%); /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e5e5e5',GradientType=0 ); /* IE6-9 */
+  resize: vertical;
 }
 
 #cancelar, #salvar {
+  float: right;
   font:bold 15px Arial;
   color:#838383;
   background:#d3d4e8;
@@ -95,13 +80,19 @@ textarea {
   height: 40px;
 }
 
-#salvar:hover{
-  background: -webkit-gradient(linear, left top, left bottom, from(#ebeded), to(#c4dddd));
-  cursor: pointer;
+#salvar {
+    margin-right: 15px;
 }
 
-#cancelar:hover{
-  background: -webkit-gradient(linear, left top, left bottom, from(#ebeded), to(#c4dddd));
-  cursor: pointer;
+#cancelar:hover, #salvar:hover{
+    background: #deefff; /* Old browsers */
+	background: -moz-linear-gradient(top, #deefff 0%, #98bede 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#deefff), color-stop(100%,#98bede)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #deefff 0%,#98bede 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #deefff 0%,#98bede 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top, #deefff 0%,#98bede 100%); /* IE10+ */
+	background: linear-gradient(to bottom, #deefff 0%,#98bede 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#deefff', endColorstr='#98bede',GradientType=0 ); /* IE6-9 */
+	cursor: pointer;
 }
 
