--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -57,6 +57,7 @@
                             <ul>
                                     <li><a href="/mensagens/novo">Nova</a></li>
                                     <li><a href="/mensagens/listar">Entrada</a></li>
+                                    <li><a href="/mensagens/listar">Saída</a></li>
                             </ul>
                     </li>
                     <li><a href="telaMensagens.html">Suporte</a>
