--- a/application/views/scripts/projetos/relatorio-participacao.phtml
+++ b/application/views/scripts/projetos/relatorio-participacao.phtml
@@ -45,7 +45,7 @@
 <div id="chart_div" style="width: 650px; height: 200px;"></div>
 
 <div>
-<table>
+<table id="tabela1">
 <CAPTION> Alocação de colaboradores no projeto </CAPTION>
     <tr>
         <th>Nome do Usuário: </th>
@@ -67,7 +67,7 @@
     ?>
 </table> <br/>
 
-<table>
+<table id="tabela2">
 <CAPTION> Tempo de dedicação as tarefas por usuário </CAPTION>
     <tr>
         <th>Número da Tarefa: </th>
