--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -53,18 +53,18 @@
                                     <li><a href="/projetos/relatorio-colaborador">Pessoal</a></li>
                             </ul>
                     </li>
-                    <li><a href="telaMensagens.html">Mensagens</a>
+                    <li><a href="/mensagens">Mensagens</a>
                             <ul>
                                     <li><a href="/mensagens/novo">Nova</a></li>
                                     <li><a href="/mensagens/listar">Entrada</a></li>
                                     <li><a href="/mensagens/listar">Saída</a></li>
                             </ul>
                     </li>
-                    <li><a href="telaMensagens.html">Suporte</a>
+                    <li><a href="#">Suporte</a>
                             <ul>
-                                    <li><a href="#nogo">FAQs</a></li>
-                                    <li><a href="#nogo">Contato</a></li>
-                                    <li><a href="#nogo">Manual</a></li>
+                                    <li><a href="#">FAQs</a></li>
+                                    <li><a href="#">Contato</a></li>
+                                    <li><a href="#">Manual</a></li>
                             </ul>
                     </li>
                 </ul>
