--- a/application/views/scripts/usuarios/novo.phtml
+++ b/application/views/scripts/usuarios/novo.phtml
@@ -1,4 +1,10 @@
-<?php echo $this->headLink()->appendStylesheet('/css/cadastroUsuarios.css');?>
+<?php 
+$this->headLink()->appendStylesheet('/css/cadastroUsuarios.css')
+        ->appendStylesheet('/jquery-ui/css/custom-theme/jquery-ui-1.8.21.custom.css');
+$this->headScript()->appendFile('/jquery-ui/js/jquery-1.7.2.min.js')
+        ->appendFile('/jquery-ui/js/jquery-ui-1.8.21.custom.min.js')
+        ->appendFile('/js/datepicker.js');
+?>
 
 <?php
 if ($this->mensagemErro): 
@@ -13,55 +19,74 @@ else :
         <fieldset id="pessoal">
             <legend>Informa&ccedil;&otilde;es pessoais</legend>
 
-            <label>Nome do Usu&aacute;rio: <br/>
-            <input type="text" id="nome" name="nome" size="60px"/></label><br/><br/>
+            <label>Nome do Usu&aacute;rio: 
+                <br />
+                <input type="text" id="nome" name="nome" size="60px"/>
+            </label>
+            <br /><br />
 
-            <label>Data de Nascimento:
-            <label style="margin-left: 2%">Sexo:<br/>
-            <input type="text" id="dataNasc" name="dataNasc" size="14"/></label>
-
+            <label for="dataNasc">Data de Nascimento:</label>
+            <label for="sexo" style="margin-left: 2%">Sexo:</label>
+            <br />
+            <input type="text" class="datepicker" id="dataNasc" name="dataNasc" />
             <select id="sexo" name="sexo"> 
-            <option value="M">Masculino</option>
-            <option value="F">Feminino</option>
-            </select> </label><br/><br/>
-
-            <label>CPF
-            <label style="margin-left: 32.5%">Telefone:<br/>
-            <input type="text" id="cpf" name="cpf"/></label>
-            <input type="text"id="telefone" name="telefone"/></label><br/><br/>
+                <option value="M">Masculino</option>
+                <option value="F">Feminino</option>
+            </select> 
+            <br /><br />
+            
+            <label for="cpf">CPF:</label>
+            <label for="telefone" style="margin-left: 32.5%">Telefone:</label>
+            <br />
+            <input type="text" id="cpf" name="cpf"/>
+            <input type="text"id="telefone" name="telefone"/>
+            <br /><br />
 
             <label>E-mail:<br/>
-            <input type="text" id="email" name="email" size="60px"/></label><br></br>
+                <input type="text" id="email" name="email" size="60px"/>
+            </label>
+            <br /><br />
 
-
-            <label> Login do Usu&aacute;rio:<br/>
-            <input type="text" id="login" name="login"/></label>
-
+            <label> Login do Usu&aacute;rio:
+                <br />
+                <input type="text" id="login" name="login"/>
+            </label>
+            <br /><br />
+            <label>Privilégios de administrador
+                <br />
+                <input type="checkbox" id="admin" name="admin"/>
+            </label>
         </fieldset>
 
         <fieldset id="endereco">
             <legend>Endere&ccedil;o</legend>
 
-            <label>Rua:
-            <label style="margin-left: 63.5%">N&uacute;mero:<br>
-            <input type="text" id="rua" name="rua" size="40px"/></label>
-            <input type="text" id="num" name="num" size="5px"/></label><br></br>
+            <label for="rua">Rua:</label>
+            <label for="num" style="margin-left: 63.5%">N&uacute;mero:</label>
+            <br />
+            <input type="text" id="rua" name="rua" size="40px"/>
+            <input type="text" id="num" name="num" size="5px"/>
+            <br /><br />
 
-            <label>Bairro: 
-            <label style="margin-left: 29.5%">Complemento<br>
-            <input type="text" id="bairro" name="bairro"/></label>
-            <input type="text" id="complemento" name="complemento"/> </label><br><br>
+            <label for="bairro">Bairro:</label>
+            <label style="margin-left: 29.5%">Complemento</label>
+            <br />
+            <input type="text" id="bairro" name="bairro"/>
+            <input type="text" id="complemento" name="complemento"/>
+            <br /><br />
 
-            <label>Cidade: 
-            <label style="margin-left: 28.5%">Estado:<br>
-            <input type="text" id="cidade" name="cidade"/></label>
+            <label for="cidade">Cidade:</label> 
+            <label for="estado" style="margin-left: 28.5%">Estado:</label>
+            <br />
+            <input type="text" id="cidade" name="cidade"/>
 
             <select id="estado" name="estado">
                 <?php 
                 foreach ($this->estados as $estado) 
                     echo "<option value\"$estado\">$estado</option>";
                 ?>
-            </select></label> <br></br>
+            </select>
+            <br /><br />
 
             <input id="cancelar" type="reset" value="Cancelar"/>
             <input id="salvar" type="submit" value="Salvar"/>
