modulo de msgs ( continuação)

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -57,7 +57,7 @@
                             <ul>
                                     <li><a href="/mensagens/novo">Nova</a></li>
                                     <li><a href="/mensagens/listar">Entrada</a></li>
-                                    <li><a href="/mensagens/listar">Saída</a></li>
+                                    <li><a href="/mensagens/caixa-saida">Saída</a></li>
                             </ul>
                     </li>
                     <li><a href="#">Suporte</a>
