--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -8,7 +8,7 @@
                 foreach ($this->paginator as $usuarioProjeto):
                 ?>
                 <li><p><?=$usuarioProjeto->nomeprojeto ?></p>
-                        <p>Descrição da Projeto: <?=$usuarioProjeto->descricao ?></p>
+                        <p>Descrição da Projeto: <?=$usuarioProjeto->descricao ?></p><br/>
                         <a href="
                             <?php 
                             echo $this->url(array('controller' => 'projetos', 
@@ -57,7 +57,7 @@
                 foreach ($this->paginator2 as $usuarioTarefa):
                 ?> 
                 <li><p><?= $usuarioTarefa->nometarefa?> </p>
-                        <p>Descrição da Tarefa: <?= $usuarioTarefa->descricao?></p>
+                        <p>Descrição da Tarefa: <?= $usuarioTarefa->descricao?></p><br/>
                         <a href="
                             <?php 
                             echo $this->url(array('controller' => 'projetos', 
