--- a/application/views/scripts/mensagens/listar.phtml
+++ b/application/views/scripts/mensagens/listar.phtml
@@ -1,68 +1,57 @@
-<?php echo $this->headLink()->appendStylesheet('/css/telaUsuarios.css');
+<?php echo $this->headLink()->appendStylesheet('/css/telaMensagens.css');
       echo $this->headScript()->appendFile('/js/jquery-1.7.2.js');
       echo $this->headScript()->appendFile('/js/layoutTabela.js');
 ?>
 
 
+<div id="confMsg">
+    <ul>
+        <li><a href="#">Caixa de Entrada</a></li>
+        <li><a href="#">Nova Mensagem</a></li>
+        <li><a href="#">Enviadas</a></li>
+    </ul>
+</div>
 
-<table id="tabelaUsuarios" border="1">
-    <tr>
-        <th id="nome">Remetente</th>
-        <th id="email">Data</th>
-        <th id="login1">Assunto</th>
-
-        <th id="telefone">Lida?</th>
-
-        <th id="visualizar">Visualizar</th>
-
-        <th id="remover">Excluir</th>
-    </tr>
-
-
-
+ <div id="entrada">    
     <?php
-    foreach ($this->paginator as $destinatario):        
-?>
-        <tr>
-            <td><?= $destinatario->nomeremetente ?></td>
-            <td><?= $destinatario->datahora ?></td>
-            <td><?= $destinatario->assunto ?></td>
+        foreach ($this->paginator as $destinatario):
+        if ($destinatario->lida == 't') $lida='Lida'; else $lida='Nao'; ?>
 
-            <td><? if ($destinatario->lida == 't') echo ('Lida'); else echo ('Nao lida'); ?></td>
-
-
-            <td>
+    
+    <ul value="<?php if ($lida=='Lida') echo ("class='lida'") ?>">
+            <li><?= $destinatario->nomeremetente ?> - </li>
+            <li><?= $destinatario->assunto ?> - </li>
+            <li><?= $destinatario->datahora ?> </li>
+            <li>
                 <a href="
-                <?php
-                echo $this->url(array('controller' => 'mensagens',
-                    'action' => 'visualizar',
-                    'id' => $destinatario->idmensagem
-                        )
-                );
-                ?>" 
+                    <?php
+                    echo $this->url(array('controller' => 'mensagens',
+                        'action' => 'visualizar',
+                        'id' => $destinatario->idmensagem
+                            )
+                    );
+                    ?>" 
                    title="Visualizar"><img src="/imagens/search_lense.png"/>
-                </a>
-            </td>
-
-            <td>
+                </a></li>
+                
+            <li id="remover">
                 <a href="
-                <?php
-                echo $this->url(array('controller' => 'mensagens',
-                    'action' => 'remover',
-                    'id' => $destinatario->idmensagem
-                        )
-                );
-                ?>" 
+                    <?php
+                    echo $this->url(array('controller' => 'mensagens',
+                        'action' => 'remover',
+                        'id' => $destinatario->idmensagem
+                            )
+                    );
+                    ?>" 
                    title="Remover"><img src="/imagens/delete_2.png"/>
                 </a>
-            </td>
-
-        </tr>
+            </li>
+        </ul>
         <?php
         
     endforeach;
     ?>
-</table>
+ </div>        
 
 <div id="paginacao">
     <?= $this->paginationControl($this->p, 'Sliding', 'my_pagination_control.phtml'); ?>
