Continuação de msg - visualizar e remover.

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -30,7 +30,7 @@
         <legend>Mensagens</legend>
             <?php 
             $contMsg=0;
-            foreach($this->destinatario as $dest):
+            foreach($this->vMsgRecebida as $dest):
                $contMsg++;
             endforeach;
             if ($contMsg==0){
