--- a/application/views/scripts/mensagens/caixa-saida.phtml
+++ b/application/views/scripts/mensagens/caixa-saida.phtml
@@ -38,7 +38,7 @@
                 <a href="
                 <?php
                 echo $this->url(array('controller' => 'mensagens',
-                    'action' => 'visualizar',
+                    'action' => 'visualizar-saida',
                     'id' => $saida->idmensagem
                         )
                 );
