--- a/application/views/scripts/mensagens/caixa-saida.phtml
+++ b/application/views/scripts/mensagens/caixa-saida.phtml
@@ -1,28 +1,32 @@
-<table border="1">
-    <tr>
-        <th id="nome">Destinatarios</th>
-        <th id="data">Data</th>
-        <th id="assunto">Assunto</th>
-
-        <th id="visualizar">Visualizar</th>
-
-        <th id="remover">Excluir</th>
-    </tr>
+<?php echo $this->headLink()->appendStylesheet('/css/telaMensagens.css');
+      echo $this->headScript()->appendFile('/js/jquery-1.7.2.js');
+      echo $this->headScript()->appendFile('/js/layoutTabela.js');
+?>
 
 
+<div id="confMsg">
+    <ul>
+        <li><a href="#">Caixa de Entrada</a></li>
+        <li><a href="#">Nova Mensagem</a></li>
+        <li><a href="#">Enviadas</a></li>
+    </ul>
+</div>
+
+<fieldset>
+    <legend>Caixa de Entrada</legend> 
 
     <?php
     foreach ($this->paginator as $saida):
     ?>
-        <tr> 
-           <?php
+       <ul id="email">
+           <li><?php
                 $destinatarios="";
                 foreach ($this->vDestinatarios as $dest):
                     if($dest->idmensagem==$saida->idmensagem){
                         $destinatarios=$destinatarios.$dest->nomedestinatario.", ";
                     }
                 endforeach; ?>
-            <td> 
+               
                 <?php
                      for ($x=0; $x<strlen($destinatarios)-2; $x++){
                          echo ($destinatarios[$x]);
@@ -30,11 +34,24 @@
                      if ($x!=0)
                          echo ('.');
                  ?>
-            </td>
-            <td><?= $saida->datahora ?></td>
-            <td><?= $saida->assunto ?></td>
+           </li>
+            <li><?= $saida->datahora ?></li>
+            <li><?= $saida->assunto ?></li>
 
-            <td>
+            <li id="remover">
+                <a href="
+                <?php
+                echo $this->url(array('controller' => 'mensagens',
+                    'action' => 'remover',
+                    'id' => $saida->idmensagem
+                        )
+                );
+                ?>" 
+                   title="Remover"><img src="/imagens/email-delete-icon.png"/>
+                </a>
+            </li>
+            
+            <li id="visualizar">
                 <a href="
                 <?php
                 echo $this->url(array('controller' => 'mensagens',
@@ -45,27 +62,14 @@
                 ?>" 
                    title="Visualizar"><img src="/imagens/search_lense.png"/>
                 </a>
-            </td>
+            </li>
 
-            <td>
-                <a href="
-                <?php
-                echo $this->url(array('controller' => 'mensagens',
-                    'action' => 'remover',
-                    'id' => $saida->idmensagem
-                        )
-                );
-                ?>" 
-                   title="Remover"><img src="/imagens/delete_2.png"/>
-                </a>
-            </td>
-
-        </tr>
+       </ul>
         <?php
         
     endforeach;
     ?>
-</table>
+</fieldset>
 
 <div id="paginacao">
     <?= $this->paginationControl($this->p, 'Sliding', 'my_pagination_control.phtml'); ?>
