--- a/application/views/scripts/mensagens/novo.phtml
+++ b/application/views/scripts/mensagens/novo.phtml
@@ -33,7 +33,7 @@ else :
 
 
                 <input id="cancelar" type="submit" value="Cancelar"/>
-                <input id="salvar" type="submit" value="Salvar"/>
+                <input id="salvar" type="submit" value="Enviar"/>
 
             </fieldset>
         </form>
