--- a/application/views/scripts/projetos/adicionar-tempo.phtml
+++ b/application/views/scripts/projetos/adicionar-tempo.phtml
@@ -3,14 +3,14 @@
 <form action='adicionar-tempo' method="post">
     <input type="hidden" name="idtarefa" value="<?= $this->tarefa->idtarefa ?>" />
     <input type="hidden" name="idprojeto" value="<?= $this->tarefa->idprojeto ?>" />
-    <label>Nome do Usuario: 
+<!--    <label>Nome do Usuario: 
         <select id="usuario" name="usuario">
             <?php 
-            foreach($this->vTarefaUsuario as $tarefaUsuario){ 
-                echo "<option value=\"$tarefaUsuario->idusuario\">$tarefaUsuario->nomeusuario</option>";
-            }
+//            foreach($this->vTarefaUsuario as $tarefaUsuario){ 
+//                echo "<option value=\"$tarefaUsuario->idusuario\">$tarefaUsuario->nomeusuario</option>";
+//            }
             ?>
-        </select> <br />
+        </select> <br />-->
     </label>
 <!--    <label>Dias: <input type="text" id="dias" name="dias" value="0" /></label><br />
     <label>Horas: <input type="text" id="horas" name="horas" value="0" /></label><br />
