--- a/application/views/scripts/mensagens/caixa-saida.phtml
+++ b/application/views/scripts/mensagens/caixa-saida.phtml
@@ -5,7 +5,6 @@
 
 
 <div id="confMsg">
-<<<<<<< HEAD
     <ul >
         <li><a href="<?php
                     echo $this->url(array('controller' => 'mensagens',
@@ -25,41 +24,25 @@
                             )
                     );
                     ?>">Caixa de saída</a></li>
-=======
-    <ul>
-        <li><a href="#">Caixa de Entrada</a></li>
-        <li><a href="#">Nova Mensagem</a></li>
-        <li><a href="#">Enviadas</a></li>
->>>>>>> 4c82f2478d09b2660a11e2134b3ae3967abea1f7
+
     </ul>
 </div>
-
-<fieldset>
-    <legend>Caixa de Entrada</legend> 
 
 <fieldset>
     <legend>Caixa de Saída</legend> 
     <?php
     foreach ($this->paginator as $saida):
     ?>
-<<<<<<< HEAD
         <ul id="email"> 
            <?php
-=======
-       <ul id="email">
-           <li><?php
->>>>>>> 4c82f2478d09b2660a11e2134b3ae3967abea1f7
                 $destinatarios="";
                 foreach ($this->vDestinatarios as $dest):
                     if($dest->idmensagem==$saida->idmensagem){
                         $destinatarios=$destinatarios.$dest->nomedestinatario.", ";
                     }
                 endforeach; ?>
-<<<<<<< HEAD
             <li> Para: 
-=======
                
->>>>>>> 4c82f2478d09b2660a11e2134b3ae3967abea1f7
                 <?php
                      for ($x=0; $x<strlen($destinatarios)-2; $x++){
                          echo ($destinatarios[$x]);
@@ -67,22 +50,15 @@
                      if ($x!=0)
                          echo ('.');
                  ?>
-<<<<<<< HEAD
             </li>
             <li> - <?= $saida->assunto ?></li>
             <li> - <?= $saida->datahora ?></li>
-            <li id="visualizar">
-=======
-           </li>
-            <li><?= $saida->datahora ?></li>
-            <li><?= $saida->assunto ?></li>
 
             <li id="remover">
->>>>>>> 4c82f2478d09b2660a11e2134b3ae3967abea1f7
                 <a href="
                 <?php
                 echo $this->url(array('controller' => 'mensagens',
-                    'action' => 'remover',
+                    'action' => 'remover-saida',
                     'id' => $saida->idmensagem
                         )
                 );
@@ -90,13 +66,8 @@
                    title="Remover"><img src="/imagens/email-delete-icon.png"/>
                 </a>
             </li>
-<<<<<<< HEAD
-
-            <li id="remover">
-=======
             
             <li id="visualizar">
->>>>>>> 4c82f2478d09b2660a11e2134b3ae3967abea1f7
                 <a href="
                 <?php
                 echo $this->url(array('controller' => 'mensagens',
@@ -109,22 +80,15 @@
                 </a>
             </li>
 
-<<<<<<< HEAD
-        </ul>
-=======
        </ul>
->>>>>>> 4c82f2478d09b2660a11e2134b3ae3967abea1f7
         <?php
         
     endforeach;
     ?>
-<<<<<<< HEAD
-=======
-</fieldset>
->>>>>>> 4c82f2478d09b2660a11e2134b3ae3967abea1f7
-
 <div id="paginacao">
     <?= $this->paginationControl($this->p, 'Sliding', 'my_pagination_control.phtml'); ?>
 </div>
-</fieldset>     
+</fieldset>
+
+
 
