--- a/application/views/scripts/login/redefinir.phtml
+++ b/application/views/scripts/login/redefinir.phtml
@@ -1,12 +1,11 @@
 <div id="geral">
-    <form action="loginRed" method="post">
+    <form action="redefinir" method="post">
         <label>Email:
             <br />
             <input type="text" name="email" size="50" placeholder="Digite seu email"/>
         </label>
-        <br /> <br />
-
-
-        <input id="botao" type="submit" value="OK"/><br><br>
+        <br /><br />
+        <input id="botao" type="submit" value="OK"/>
+        <br /><br />
     </form>
 </div>
