--- a/public/css/telaUsuarios.css
+++ b/public/css/telaUsuarios.css
@@ -2,8 +2,7 @@
 position: relative;
 border-collapse:collapse;
 background: #FFE9E8;
-left: 4%;
-margin-top: 80px;
+margin: 80px auto;
 }
 
 #tabelaUsuarios, td, th {
