Redefinição de senha

--- a/application/views/scripts/login/index.phtml
+++ b/application/views/scripts/login/index.phtml
@@ -19,6 +19,6 @@ if ($this->mensagemErro)
     <br />
 
     <input id="botao" type="submit" value="Entrar"/><br><br>
-    <a id="senhaesq" href="/login/redefinir">Esqueceu sua senha?</a>
+    <a id="senhaesq" href="/login/solicitar">Esqueceu sua senha?</a>
     
 </form>
