--- a/application/views/scripts/projetos/detalhar-tarefa.phtml
+++ b/application/views/scripts/projetos/detalhar-tarefa.phtml
@@ -66,7 +66,7 @@
                     <li><a href="
                     <?php 
                     echo $this->url(array('controller' => 'projetos', 
-                                        'action'     => 'remover', 
+                                        'action'     => 'remover-tarefa', 
                                         'idprojeto' => $this->tarefas->idprojeto,
                                         'idtarefa' => $this->tarefas->idtarefa
                             )
@@ -78,7 +78,7 @@
                     <li><a href="
                         <?php 
                         echo $this->url(array('controller' => 'projetos', 
-                                            'action'     => 'fechar', 
+                                            'action'     => 'fechar-tarefa', 
                                             'idprojeto' => $this->tarefas->idprojeto,
                                             'idtarefa' => $this->tarefas->idtarefa
                                 )
