Correção do Erro #7

--- a/application/views/scripts/projetos/novo.phtml
+++ b/application/views/scripts/projetos/novo.phtml
@@ -35,7 +35,7 @@ else:
 
             <label>Descri&ccedil;&atilde;o: 
                 <br/>
-                <textarea id="descricao" rows="5" cols="60"></textarea>
+                <textarea id="descricao" name="descricao" rows="5" cols="60"></textarea>
             </label>
             <br />
             <br />            
